[package]
name = "mees"
version = "0.1.0"
authors = ["Brett Mayson <brett@mayson.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.68"
mees-proc = { path = "../proc" }
rmp-serde = "1.1.1"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
